<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_marginStart="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/title_confirm_info"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_height="40dp"
        android:gravity="start"
        android:layout_below="@+id/tv_title"
        android:textSize="15sp"
        android:text="@string/resume_name"/>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_height="40dp"
        android:gravity="start"
        android:layout_below="@+id/tv_name"
        android:textSize="15sp"
        android:text="@string/resume_date"/>

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_height="40dp"
        android:gravity="start"
        android:layout_below="@+id/tv_date"
        android:textSize="15sp"
        android:text="@string/resume_phone"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_height="40dp"
        android:gravity="start"
        android:layout_below="@+id/tv_phone"
        android:textSize="15sp"
        android:text="@string/resume_email"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_height="50dp"
        android:gravity="start"
        android:layout_below="@+id/tv_email"
        android:textSize="15sp"
        android:text="@string/resume_description"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:text="@string/bt_edit"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_description"
        android:theme="@style/MyButtonRaised"
        android:onClick="OnClickEdit"/>

</RelativeLayout>